moved GT directory settings to settings.txt improved evaluation report (show cell ID and fixed x/yticks)

--- a/evaluate_each.ipynb
+++ b/evaluate_each.ipynb
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import json\n",
     "import tifffile as tiff\n",
+    "from scipy.ndimage import center_of_mass\n",
     "from evaluate import load_roi, roi2masks_from_demix_result, count_matches, calc_f1_scores"
    ]
   },
@@ -20,10 +21,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MIP_DIR = '/media/bandy/myraid0/ramdas/VI/SelectedData_v0.2/GT_comparison/MIP/'\n",
-    "CONSENSUS_ROI_DIR = '/media/bandy/myraid0/ramdas/VI/SelectedData_v0.2/GT_comparison/GTs_rev20201027/consensus/'\n",
-    "INDIVIDUAL_ROI_DIR = '/media/bandy/myraid0/ramdas/VI/SelectedData_v0.2/GT_comparison/GTs/'\n",
-    "GT_IDS = ['Atsushi','Ram', 'Bandy']\n",
+    "with open('settings.txt') as f:\n",
+    "    settings = json.load(f)\n",
+    "\n",
+    "SUMMARY_IMAGE_DIR = settings['summary_image_dir']\n",
+    "CONSENSUS_GT_DIR = settings['consensus_gt_dir']\n",
+    "INDIVIDUAL_GT_DIR = settings['individual_gt_dir']\n",
+    "GT_IDS = settings['individual_gt_ids']\n",
     "DEMIX_DIR = '@@@DEMIX_DIR'\n",
     "EVAL_DIR = '@@@EVAL_DIR'\n",
     "BASENAME = '@@@BASENAME'\n",
@@ -51,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_image = tiff.imread(MIP_DIR + '/' + BASENAME + '.tif')\n",
+    "summary_image = tiff.imread(SUMMARY_IMAGE_DIR + '/' + BASENAME + '.tif')\n",
     "plt.imshow(summary_image, interpolation='bilinear', cmap='gray')\n",
     "plt.axis('off')\n",
     "plt.title('Summary image')\n",
@@ -69,6 +73,7 @@
     "\n",
     "eval_mask_images, eval_contour_image = roi2masks_from_demix_result(demix_result, summary_image.shape)\n",
     "tiff.imsave(EVAL_DIR + '/' + BASENAME + '.tif', eval_mask_images, photometric='minisblack')\n",
+    "num_eval_masks = len(eval_mask_images)\n",
     "\n",
     "plt.axis('off')\n",
     "plt.imshow(summary_image, interpolation='bilinear', cmap='gray')\n",
@@ -85,7 +90,8 @@
    },
    "outputs": [],
    "source": [
-    "gt_mask_images, gt_contour_image = load_roi(CONSENSUS_ROI_DIR, BASENAME, summary_image.shape)\n",
+    "gt_mask_images, gt_contour_image = load_roi(CONSENSUS_GT_DIR, BASENAME, summary_image.shape)\n",
+    "num_gt_masks = len(gt_mask_images)\n",
     "\n",
     "plt.axis('off')\n",
     "plt.imshow(summary_image, interpolation='bilinear', cmap='gray')\n",
@@ -119,13 +125,21 @@
     "plt.imshow(summary_image, interpolation='bilinear', cmap='gray')\n",
     "plt.imshow(create_contour_overlay(gt_contour_image, [0, 255, 255]), interpolation='bilinear')\n",
     "plt.imshow(create_contour_overlay(eval_contour_image, [255, 255, 0]), interpolation='bilinear')\n",
+    "for i in range(num_eval_masks):\n",
+    "    p = center_of_mass(eval_mask_images[i])\n",
+    "    plt.text(p[1], p[0], str(i), color='yellow')\n",
+    "for i in range(num_gt_masks):\n",
+    "    p = center_of_mass(gt_mask_images[i])\n",
+    "    plt.text(p[1], p[0], str(i), color='cyan')\n",
     "plt.title('Predicted (yellow) vs GT (cyan)')\n",
     "\n",
     "ax = plt.subplot(1, 3, 2)\n",
-    "ax.set_xticks([x - 0.5 for x in range(IoU.shape[1])], minor=True)\n",
-    "ax.set_yticks([y - 0.5 for y in range(IoU.shape[0])], minor=True)\n",
+    "ax.set_xticks([x - 0.5 for x in range(num_gt_masks)], minor=True)\n",
+    "ax.set_yticks([y - 0.5 for y in range(num_eval_masks)], minor=True)\n",
     "ax.tick_params(axis='both', which='both', length=0)\n",
     "plt.grid(which='minor')\n",
+    "plt.xticks(list(range(num_gt_masks)))\n",
+    "plt.yticks(list(range(num_eval_masks)))\n",
     "plt.imshow(IoU, aspect='equal', vmin=0, vmax=1, cmap='inferno')\n",
     "plt.colorbar()\n",
     "plt.xlabel('Ground Truth')\n",
@@ -155,8 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = ['Prediction_%2.2d' % i for i in range(IoU.shape[0])]\n",
-    "columns = ['GT_%2.2d' % i for i in range(IoU.shape[1])]\n",
+    "index = ['Prediction_%2.2d' % i for i in range(num_eval_masks)]\n",
+    "columns = ['GT_%2.2d' % i for i in range(num_gt_masks)]\n",
     "df = pd.DataFrame(IoU, index=index, columns=columns)\n",
     "df.to_csv(EVAL_DIR + '/' + BASENAME + '_IoU.csv')\n",
     "\n",
@@ -191,7 +205,7 @@
    "source": [
     "scores = {}\n",
     "for gt_id in GT_IDS:\n",
-    "    gt_mask_images, gt_contour_image = load_roi(INDIVIDUAL_ROI_DIR + '/' + gt_id, BASENAME, summary_image.shape)\n",
+    "    gt_mask_images, gt_contour_image = load_roi(INDIVIDUAL_GT_DIR + '/' + gt_id, BASENAME, summary_image.shape)\n",
     "\n",
     "    plt.axis('off')\n",
     "    plt.imshow(summary_image, interpolation='bilinear', cmap='gray')\n",
