added evaluation reporting for all datasets

--- a/evaluate_each.ipynb
+++ b/evaluate_each.ipynb
@@ -28,10 +28,11 @@
     "CONSENSUS_GT_DIR = settings['consensus_gt_dir']\n",
     "INDIVIDUAL_GT_DIR = settings['individual_gt_dir']\n",
     "GT_IDS = settings['individual_gt_ids']\n",
+    "REPRESENTATIVE_IOU = settings['representative_iou']\n",
+    "\n",
     "DEMIX_DIR = '@@@DEMIX_DIR'\n",
     "EVAL_DIR = '@@@EVAL_DIR'\n",
-    "BASENAME = '@@@BASENAME'\n",
-    "REPRESENTATIVE_IOU = 0.4"
+    "BASENAME = '@@@BASENAME'"
    ]
   },
   {
