added individual GT plots to the overall accuracy report

--- a/evaluate_all.ipynb
+++ b/evaluate_all.ipynb
@@ -39,7 +39,7 @@
     "    head, tail = ntpath.split(path)\n",
     "    return tail or ntpath.basename(head)\n",
     "\n",
-    "def aggregate_scores(filter_func=lambda x: True):\n",
+    "def aggregate_scores(filter_func=lambda x: True, suffix='stats'):\n",
     "    \n",
     "    with open('file_params.txt') as f:\n",
     "        params = json.load(f)\n",
@@ -56,7 +56,7 @@
     "        eval_dir = settings['output_base_path'] + '/' + param['output_path']\n",
     "        eval_dir += '/' + settings['evaluation_result_path']\n",
     "        basename, _ = os.path.splitext(path_leaf(param['filename']))\n",
-    "        df = pd.read_csv(eval_dir + '/' + basename + '_stats.csv')\n",
+    "        df = pd.read_csv(eval_dir + '/' + basename + '_' + suffix + '.csv')\n",
     "        if(first):\n",
     "            df_sum = df[['TruePos', 'FalsePos', 'FalseNeg']]\n",
     "            thresholds = df['IoU_Thresh']\n",
@@ -210,6 +210,50 @@
    "outputs": [],
    "source": [
     "plot_per_dataset_score(df_each, 'Recall', 'Recall', 'C1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_reps = {}\n",
+    "scores = {}\n",
+    "for gt_id in GT_IDS:\n",
+    "    f1_rep, df_sum, _ = aggregate_scores(suffix=gt_id)\n",
+    "    f1_reps[gt_id] = f1_rep\n",
+    "    scores[gt_id] = df_sum\n",
+    "    \n",
+    "def plot_score_multiple_gt(scores, idx, label, reps=None):\n",
+    "    plt.axis('square')\n",
+    "    plt.xlim(0, 1)\n",
+    "    plt.ylim(0, 1)\n",
+    "    for i, gt_id in enumerate(GT_IDS):\n",
+    "        plt.plot(thresholds, scores[gt_id][idx], label=gt_id)\n",
+    "        if(reps != None):\n",
+    "            rep = reps[gt_id]\n",
+    "            plt.text(REPRESENTATIVE_IOU + 0.1, rep, 'F1 = %.2f' % rep, color='C%d' % i)\n",
+    "    plt.legend(loc='upper right')\n",
+    "    plt.ylabel(label)\n",
+    "    plt.xlabel('IoU Threshold')\n",
+    "    plt.vlines(REPRESENTATIVE_IOU, 0, 1, colors='gray', linestyles='dashed')\n",
+    "    plt.title(label)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(17, 5))\n",
+    "plt.suptitle('Accuracy for Individual GTs', fontsize=16)\n",
+    "\n",
+    "plt.subplot(1, 3, 1)\n",
+    "plot_score_multiple_gt(scores, 'F1', 'F1 score', f1_reps)\n",
+    "\n",
+    "plt.subplot(1, 3, 2)\n",
+    "plot_score_multiple_gt(scores, 'Precision', 'Precision')\n",
+    "\n",
+    "plt.subplot(1, 3, 3)\n",
+    "plot_score_multiple_gt(scores, 'Recall', 'Recall')\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
