--- a/evaluate_each.ipynb
+++ b/evaluate_each.ipynb
@@ -216,7 +216,15 @@
     "    plt.show()\n",
     "    \n",
     "    counts, _ = count_matches(eval_mask_images, gt_mask_images, thresholds)\n",
-    "    scores[gt_id] = calc_f1_scores(counts)"
+    "    f1, precision, recall = calc_f1_scores(counts)\n",
+    "    scores[gt_id] = (f1, precision, recall)\n",
+    "    \n",
+    "    df = pd.DataFrame(counts, columns=['TruePos', 'FalsePos', 'FalseNeg'])\n",
+    "    df.insert(0, 'IoU_Thresh', thresholds)\n",
+    "    df['Precision'] = precision\n",
+    "    df['Recall'] = recall\n",
+    "    df['F1'] = f1\n",
+    "    df.to_csv(EVAL_DIR + '/' + BASENAME + '_' + gt_id + '.csv', index=False)"
    ]
   },
   {
