Pushing pipeline with NMF and post processing speedups

--- a/python/evaluate_all.ipynb
+++ b/python/evaluate_all.ipynb
@@ -12,7 +12,7 @@
     "import json\n",
     "import ntpath\n",
     "import os\n",
-    "from evaluate import calc_f1_scores"
+    "from python.evaluate import calc_f1_scores"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "    for key, param in params.items():\n",
     "        if(not filter_func(param)):\n",
     "            continue\n",
-    "        eval_dir = settings['output_base_path'] + '/' + param['output_path']\n",
+    "        eval_dir = settings['output_base_path']\n",
     "        eval_dir += '/' + settings['evaluation_result_path']\n",
     "        basename, _ = os.path.splitext(path_leaf(param['filename']))\n",
     "        df = pd.read_csv(eval_dir + '/' + basename + '_' + suffix + '.csv')\n",
