--- a/python/evaluate_each.ipynb
+++ b/python/evaluate_each.ipynb
@@ -12,7 +12,7 @@
     "import json\n",
     "import tifffile as tiff\n",
     "from scipy.ndimage import center_of_mass\n",
-    "from evaluate import load_roi, roi2masks_from_demix_result, count_matches, calc_f1_scores"
+    "from python.evaluate import load_roi, roi2masks_from_demix_result, count_matches, calc_f1_scores"
    ]
   },
   {
