--- a/evaluate/templates/evaluate_each.ipynb
+++ b/evaluate/templates/evaluate_each.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate import evaluate_each, plot_F1, plot_IoU\n",
+    "from evaluate import evaluate_each, plot_F1_and_IoU, plot_masks\n",
     "from IPython.display import Markdown"
    ]
   },
@@ -18,6 +18,7 @@
    "source": [
     "IN_FILE = '@@@IN_FILE'\n",
     "GT_FILE = '@@@GT_FILE'\n",
+    "IMG_FILE = '@@@IMG_FILE'\n",
     "OUT_DIR = '@@@OUT_DIR'\n",
     "Markdown(\"# Evaluation Result for file: \" + IN_FILE)"
    ]
@@ -28,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_data = evaluate_each(IN_FILE, GT_FILE, OUT_DIR)"
+    "eval_data = evaluate_each(IN_FILE, GT_FILE, IMG_FILE, OUT_DIR)"
    ]
   },
   {
@@ -37,7 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_F1(eval_data['f1'], eval_data['precision'], eval_data['recall'], eval_data['thresholds'])"
+    "plot_F1_and_IoU(eval_data['f1'], eval_data['precision'], eval_data['recall'],\n",
+    "                eval_data['thresholds'], eval_data['IoU'])"
    ]
   },
   {
@@ -46,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_IoU(eval_data['IoU'])"
+    "plot_masks(eval_data['thumbnail'], eval_data['eval_masks'], eval_data['gt_masks'])"
    ]
   }
  ],
