Pipeline can run on VolPy data sets - handle file organization where everything related to one data set goes under one directory - preprocessing can skip first unusable frames - moved param files under params directory - runpy instead of importlib for parameter files so any file path works - clear_session before loading trained U-Net model to avoid CUDA hangup

--- a/evaluate/templates/evaluate_each.ipynb
+++ b/evaluate/templates/evaluate_each.ipynb
@@ -16,11 +16,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "DATA_NAME = '@@@DATA_NAME'\n",
     "IN_FILE = '@@@IN_FILE'\n",
     "GT_FILE = '@@@GT_FILE'\n",
     "IMG_FILE = '@@@IMG_FILE'\n",
     "OUT_DIR = '@@@OUT_DIR'\n",
-    "Markdown(\"# Evaluation Result for file: \" + IN_FILE)"
+    "Markdown(\"# Evaluation Result for file: \" + DATA_NAME)"
    ]
   },
   {
@@ -29,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_data = evaluate_each(IN_FILE, GT_FILE, IMG_FILE, OUT_DIR)"
+    "eval_data = evaluate_each(IN_FILE, GT_FILE, IMG_FILE, OUT_DIR, DATA_NAME)"
    ]
   },
   {
