revised the way of recording speed statistics - to support partial pipeline re-run (i.e., run only selected stages) - to show all the records in all.html

--- a/evaluate/templates/evaluate_all.ipynb
+++ b/evaluate/templates/evaluate_all.ipynb
@@ -66,6 +66,24 @@
    "source": [
     "plot_per_dataset_scores(eval_data['dataset'], eval_data['recall_each'], 'Recall', 'C1')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(\"# Speed Statistics\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_data['times']"
+   ]
   }
  ],
  "metadata": {
