--- a/evaluate/templates/evaluate_all.ipynb
+++ b/evaluate/templates/evaluate_all.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from evaluate import evaluate_all, plot_F1, plot_per_dataset_scores\n",
-    "from IPython.display import Markdown"
+    "from pathlib import Path\n",
+    "from IPython.display import Markdown, Image, display"
    ]
   },
   {
@@ -17,7 +18,7 @@
    "outputs": [],
    "source": [
     "OUT_DIR = '@@@OUT_DIR'\n",
-    "Markdown(\"# Evaluation Result from: \" + OUT_DIR)"
+    "Markdown('# Evaluation Result from: ' + OUT_DIR)"
    ]
   },
   {
@@ -36,8 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_F1(eval_data['f1_all'], eval_data['precision_all'],\n",
-    "        eval_data['recall_all'], eval_data['thresholds'])"
+    "plot_F1(eval_data['f1_all'], eval_data['precision_all'], eval_data['recall_all'], eval_data['thresholds'])"
    ]
   },
   {
@@ -73,7 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Markdown(\"# Speed Statistics\")"
+    "display(Markdown('# Speed Statistics'))\n",
+    "eval_data['times']"
    ]
   },
   {
@@ -82,7 +83,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_data['times']"
+    "display(Markdown('# Individual Results'))\n",
+    "for name, f1 in zip(eval_data['dataset'], eval_data['f1_each']):\n",
+    "    display(Markdown('***'))\n",
+    "    display(Markdown('## Dataset ' + name + ': F1 = %.2f' % f1))\n",
+    "    p = Path(OUT_DIR, name)\n",
+    "    display(Image(filename=p.joinpath(name + '_F1_and_IoU.png')))\n",
+    "    display(Image(filename=p.joinpath(name + '_masks_eval.png')))"
    ]
   }
  ],
