--- a/evaluate/templates/evaluate_each.ipynb
+++ b/evaluate/templates/evaluate_each.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "from evaluate import evaluate_each, plot_F1_and_IoU, plot_masks\n",
+    "from pathlib import Path\n",
     "from IPython.display import Markdown"
    ]
   },
@@ -21,7 +22,7 @@
     "GT_FILE = '@@@GT_FILE'\n",
     "IMG_FILE = '@@@IMG_FILE'\n",
     "OUT_DIR = '@@@OUT_DIR'\n",
-    "Markdown(\"# Evaluation Result for file: \" + DATA_NAME)"
+    "Markdown('# Evaluation Result for file: ' + DATA_NAME)"
    ]
   },
   {
@@ -40,7 +41,8 @@
    "outputs": [],
    "source": [
     "plot_F1_and_IoU(eval_data['f1'], eval_data['precision'], eval_data['recall'],\n",
-    "                eval_data['thresholds'], eval_data['IoU'])"
+    "                eval_data['thresholds'], eval_data['IoU'],\n",
+    "                Path(OUT_DIR, DATA_NAME + '_F1_and_IoU'))"
    ]
   },
   {
@@ -49,7 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_masks(eval_data['thumbnail'], eval_data['eval_masks'], eval_data['gt_masks'])"
+    "plot_masks(eval_data['thumbnail'], eval_data['eval_masks'], eval_data['gt_masks'],\n",
+    "           Path(OUT_DIR, DATA_NAME + '_masks_eval'))"
    ]
   }
  ],
