updated GT path to version 0.5

--- a/gt/evaluate_gt.ipynb
+++ b/gt/evaluate_gt.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GT_DIR = '/media/bandy/nvme_data/voltage/datasets_v0.3/lowmag_GT_v20201027'\n",
+    "GT_DIR = '/media/bandy/nvme_data/voltage/datasets_v0.5/lowmag_GT'\n",
     "f1_dict = evaluate_gt(GT_DIR, thresholds)\n",
     "plot_multiple_F1s(f1_dict, thresholds)"
    ]
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GT_DIR = '/media/bandy/nvme_data/voltage/datasets_v0.3/highmag_GT_v20201027'\n",
+    "GT_DIR = '/media/bandy/nvme_data/voltage/datasets_v0.5/highmag_GT'\n",
     "f1_dict = evaluate_gt(GT_DIR, thresholds)\n",
     "plot_multiple_F1s(f1_dict, thresholds)"
    ]
