added (naive) voltage trace extraction and spike detection removed (under development and unusable) code for online execution

--- a/evaluate/templates/evaluate_each.ipynb
+++ b/evaluate/templates/evaluate_each.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate import evaluate_each, plot_F1_and_IoU, plot_masks\n",
+    "from evaluate import evaluate_each, plot_F1_and_IoU, plot_masks, plot_voltage_traces\n",
     "from pathlib import Path\n",
     "from IPython.display import Markdown"
    ]
@@ -21,6 +21,7 @@
     "IN_FILE = '@@@IN_FILE'\n",
     "GT_FILE = '@@@GT_FILE'\n",
     "IMG_FILE = '@@@IMG_FILE'\n",
+    "SPIKE_FILE = '@@@SPIKE_FILE'\n",
     "OUT_DIR = '@@@OUT_DIR'\n",
     "Markdown('# Evaluation Result for file: ' + DATA_NAME)"
    ]
@@ -53,6 +54,16 @@
    "source": [
     "plot_masks(eval_data['thumbnail'], eval_data['eval_masks'], eval_data['gt_masks'],\n",
     "           Path(OUT_DIR, DATA_NAME + '_masks_eval'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_voltage_traces(eval_data['thumbnail'], eval_data['eval_masks'], SPIKE_FILE,\n",
+    "                    Path(OUT_DIR, DATA_NAME + '_spikes'))"
    ]
   }
  ],
