consolidated REPRESENTATIVE_IOU in one place in default params

--- a/evaluate/templates/evaluate_all.ipynb
+++ b/evaluate/templates/evaluate_all.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "OUT_DIR = '@@@OUT_DIR'\n",
+    "REP_IOU = @@@REPRESENTATIVE_IOU\n",
     "Markdown('# Evaluation Result from: ' + OUT_DIR)"
    ]
   },
@@ -27,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_data = evaluate_all(OUT_DIR)\n",
+    "eval_data = evaluate_all(OUT_DIR, REP_IOU)\n",
     "Markdown('# F1 = %.2f' % eval_data['representative f1'])"
    ]
   },
@@ -37,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_F1(eval_data['f1_all'], eval_data['precision_all'], eval_data['recall_all'], eval_data['thresholds'])"
+    "plot_F1(eval_data['f1_all'], eval_data['precision_all'], eval_data['recall_all'], eval_data['thresholds'], REP_IOU)"
    ]
   },
   {
@@ -46,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_per_dataset_scores(eval_data['dataset'], eval_data['f1_each'], 'F1', 'C2')"
+    "plot_per_dataset_scores(eval_data['dataset'], eval_data['f1_each'], 'F1', 'C2', REP_IOU)"
    ]
   },
   {
@@ -55,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_per_dataset_scores(eval_data['dataset'], eval_data['precision_each'], 'Precision', 'C0')"
+    "plot_per_dataset_scores(eval_data['dataset'], eval_data['precision_each'], 'Precision', 'C0', REP_IOU)"
    ]
   },
   {
@@ -64,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_per_dataset_scores(eval_data['dataset'], eval_data['recall_each'], 'Recall', 'C1')"
+    "plot_per_dataset_scores(eval_data['dataset'], eval_data['recall_each'], 'Recall', 'C1', REP_IOU)"
    ]
   },
   {
