--- a/evaluate/templates/evaluate_each.ipynb
+++ b/evaluate/templates/evaluate_each.ipynb
@@ -23,6 +23,7 @@
     "IMG_FILE = '@@@IMG_FILE'\n",
     "SPIKE_FILE = '@@@SPIKE_FILE'\n",
     "OUT_DIR = '@@@OUT_DIR'\n",
+    "REP_IOU = @@@REPRESENTATIVE_IOU\n",
     "Markdown('# Evaluation Result for file: ' + DATA_NAME)"
    ]
   },
@@ -42,7 +43,7 @@
    "outputs": [],
    "source": [
     "plot_F1_and_IoU(eval_data['f1'], eval_data['precision'], eval_data['recall'],\n",
-    "                eval_data['thresholds'], eval_data['IoU'],\n",
+    "                eval_data['thresholds'], eval_data['IoU'], REP_IOU,\n",
     "                Path(OUT_DIR, DATA_NAME + '_F1_and_IoU'))"
    ]
   },
