added code to save F-1 scores in a text file

--- a/gt/evaluate_gt.ipynb
+++ b/gt/evaluate_gt.ipynb
@@ -146,8 +146,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def save_multiple_F1s(f1_dict, thresholds):\n",
+    "    \"\"\"\n",
+    "    Save multiple F1 score curves in text file for plotting outside of this notebook.\n",
+    "    The parameters are the same as those in plot_multiple_F1s().\n",
+    "    \"\"\"\n",
+    "    with open('f1s.dat', 'w') as f:\n",
+    "        for i, t in enumerate(thresholds):\n",
+    "            f1s = [t, f1_dict['mean'][i]]\n",
+    "            for label, f1 in f1_dict.items():\n",
+    "                if(label != 'mean'):\n",
+    "                    f1s.append(f1[i])\n",
+    "            f.write(' '.join(str(v) for v in f1s) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "GT_DIR = '/media/bandy/nvme_data/voltage/datasets_v0.5/lowmag_GT'\n",
     "f1_dict = evaluate_gt(GT_DIR, thresholds)\n",
+    "save_multiple_F1s(f1_dict, thresholds)\n",
     "plot_multiple_F1s(f1_dict, thresholds)"
    ]
   },
