restructured parameters (mostly around path variables)

--- a/compare/invivo/bloodmask.ipynb
+++ b/compare/invivo/bloodmask.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import runpy\n",
     "import numpy as np\n",
     "import tifffile as tiff\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_PATH = '/media/bandy/nvme_work/voltage/compare/invivo/lowmag/'\n",
+    "paths = runpy.run_path('../../params/paths.py')\n",
+    "INPUT_PATH = Path(paths['OUTPUT_BASE_PATH'], 'compare', 'invivo', 'voltage_HPC2')\n",
     "DATASET_NAME = '02_02'"
    ]
   },
@@ -187,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
