--- a/gt/evaluate_gt.ipynb
+++ b/gt/evaluate_gt.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import runpy\n",
     "import numpy as np\n",
     "import tifffile as tiff\n",
     "import matplotlib.pyplot as plt\n",
@@ -29,9 +30,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "REPRESENTATIVE_IOU = 0.4\n",
-    "NUM_THRESHOLDS = 100\n",
-    "thresholds = np.array(range(1, NUM_THRESHOLDS+1)) / NUM_THRESHOLDS"
+    "# This notebook evaluates individual annotations against \"ground truth (GT)\" masks.\n",
+    "# GT is contructed through a consensus building process where individual annotators\n",
+    "# look at majority voting results (see majority_vote.ipynb) and resolve any discrepancy\n",
+    "# through discussion and redrawing ROIs.\n",
+    "# Evaluation here shows how individual judgement varies with respect to the consensus,\n",
+    "# providing a target accuracy. If an automatic segmentation method achieves the target,\n",
+    "# it can be considered that it is on par with individual human judgement.\n",
+    "\n",
+    "# GT directory\n",
+    "# Consensus GT should be placed directly under it, and individual annotations should\n",
+    "# be placed in subdirectories.\n",
+    "paths = runpy.run_path('../params/paths.py')\n",
+    "GT_DIR = paths['HPC2_DATASETS'] + '_GT'\n",
+    "\n",
+    "# Representative IoU threshold\n",
+    "params = runpy.run_path('../params/defaults.py')\n",
+    "REPRESENTATIVE_IOU = params['REPRESENTATIVE_IOU']"
    ]
   },
   {
@@ -97,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_multiple_F1s(f1_dict, thresholds):\n",
+    "def plot_multiple_F1s(f1_dict, thresholds, representative_iou):\n",
     "    \"\"\"\n",
     "    Plot multiple F1 score curves.\n",
     "\n",
@@ -108,6 +123,8 @@
     "        a label name and a list of F1 scores for varying IoU thresholds.\n",
     "    thresholds : list of float\n",
     "        IoU thresholds.\n",
+    "    representative_iou : float\n",
+    "        IoU threshold at which representative F1 scores will be reported.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -128,15 +145,15 @@
     "    plt.legend(loc='lower left')\n",
     "    plt.ylabel('Score')\n",
     "    plt.xlabel('IoU Threshold')\n",
-    "    plt.vlines(REPRESENTATIVE_IOU, 0, 1, colors='gray', linestyles='dashed') \n",
+    "    plt.vlines(representative_iou, 0, 1, colors='gray', linestyles='dashed') \n",
     "\n",
-    "    indices = np.where(thresholds >= REPRESENTATIVE_IOU)\n",
+    "    indices = np.where(thresholds >= representative_iou)\n",
     "    rep_idx = indices[0][0]\n",
     "    title = 'F1 = %.2f (mean)' % f1_dict['mean'][rep_idx]\n",
     "    for label, f1 in f1_dict.items():\n",
     "        if(label != 'mean'):\n",
     "            title += ', %.2f (%s)' % (f1[rep_idx], label)\n",
-    "    plt.title(title + ' at IoU = %.1f' % REPRESENTATIVE_IOU)\n",
+    "    plt.title(title + ' at IoU = %.1f' % representative_iou)\n",
     "    plt.show()"
    ]
   },
@@ -166,21 +183,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GT_DIR = '/media/bandy/nvme_data/voltage/datasets_v0.5/lowmag_GT'\n",
+    "NUM_THRESHOLDS = 100\n",
+    "thresholds = np.array(range(1, NUM_THRESHOLDS+1)) / NUM_THRESHOLDS\n",
     "f1_dict = evaluate_gt(GT_DIR, thresholds)\n",
     "save_multiple_F1s(f1_dict, thresholds)\n",
-    "plot_multiple_F1s(f1_dict, thresholds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GT_DIR = '/media/bandy/nvme_data/voltage/datasets_v0.5/highmag_GT'\n",
-    "f1_dict = evaluate_gt(GT_DIR, thresholds)\n",
-    "plot_multiple_F1s(f1_dict, thresholds)"
+    "plot_multiple_F1s(f1_dict, thresholds, REPRESENTATIVE_IOU)"
    ]
   }
  ],
