--- a/gt/majority_vote.ipynb
+++ b/gt/majority_vote.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import runpy\n",
     "import numpy as np\n",
     "import tifffile as tiff\n",
     "import matplotlib.pyplot as plt\n",
@@ -30,9 +31,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GT_LIST = ['Atsushi', 'Yves', 'Bandy']\n",
-    "ROI_PATH = '/media/bandy/nvme_work/voltage/lowmag_roi/'\n",
-    "IMG_PATH = '/media/bandy/nvme_work/voltage/lowmag_for_annotation/'"
+    "# This notebook compares ROIs by individual annotators and merges them through\n",
+    "# majority voting. All the annotators should look at pairwise comparisons as well\n",
+    "# as merged masks, and decide, through discussion, whether the masks can be used\n",
+    "# as \"ground truth\" labels. If significant discrepancy among individual ROIs is\n",
+    "# observed (typically, if a pairwise overlap has an IoU of 0.4 or less), it must\n",
+    "# be resolved by discussion and redrawing.\n",
+    "\n",
+    "# ROI directory\n",
+    "# ROIs by individual annotators should be placed in subdirectories.\n",
+    "paths = runpy.run_path('../params/paths.py')\n",
+    "ROI_PATH = Path(paths['HPC2_DATASETS'] + '_GT')\n",
+    "\n",
+    "# Image directory\n",
+    "# For visual inspection, ROIs will be shown on the microscope images under\n",
+    "# this directory. Run summarize.py first to produce *_avg.tif.\n",
+    "IMG_PATH = Path(paths['OUTPUT_BASE_PATH'], 'results', 'voltage_HPC2')"
    ]
   },
   {
@@ -158,9 +172,10 @@
    },
    "outputs": [],
    "source": [
-    "def show_majority_votes(data_name):\n",
+    "def show_majority_votes(img_path, roi_path, data_name):\n",
     "\n",
-    "    majority_list, masks_dict, contour_dict, img = calc_majority_vote(IMG_PATH, ROI_PATH, GT_LIST, data_name)\n",
+    "    GT_LIST = sorted([x.stem for x in roi_path.iterdir() if x.is_dir()])\n",
+    "    majority_list, masks_dict, contour_dict, img = calc_majority_vote(img_path, roi_path, GT_LIST, data_name)\n",
     "\n",
     "    LINE_COLOR = [255, 255, 0]\n",
     "    overlay = np.zeros((img.shape[0], img.shape[1], 4), dtype='uint8')\n",
@@ -305,7 +320,7 @@
     "for d in Path(IMG_PATH).iterdir():\n",
     "    if(d.is_dir()):\n",
     "        print('Data set ' + d.name)\n",
-    "        IoUs += show_majority_votes(d.name)"
+    "        IoUs += show_majority_votes(IMG_PATH, ROI_PATH, d.name)"
    ]
   },
   {
