--- a/compare/invivo/background.ipynb
+++ b/compare/invivo/background.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import runpy\n",
     "import numpy as np\n",
     "import tifffile as tiff\n",
     "import matplotlib.pyplot as plt\n",
@@ -40,8 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_PATH = '/media/bandy/nvme_work/voltage/compare/invivo/lowmag/'\n",
-    "GT_PATH = '/media/bandy/nvme_data/voltage/datasets_v0.5/lowmag_GT'\n",
+    "paths = runpy.run_path('../../params/paths.py')\n",
+    "INPUT_PATH = Path(paths['OUTPUT_BASE_PATH'], 'compare', 'invivo', 'voltage_HPC2')\n",
+    "GT_PATH = paths['HPC2_DATASETS'] + '_GT'\n",
     "DATASET_NAME = '02_02'"
    ]
   },
