changed the way to specify HPC2 datasets

--- a/compare/invivo/background.ipynb
+++ b/compare/invivo/background.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "paths = runpy.run_path('../../params/paths.py')\n",
     "INPUT_PATH = Path(paths['OUTPUT_BASE_PATH'], 'compare', 'invivo', 'voltage_HPC2')\n",
-    "GT_PATH = paths['HPC2_DATASETS'] + '_GT'\n",
+    "GT_PATH = Path(paths['HPC2_DATASETS'], 'HPC2_GT')\n",
     "DATASET_NAME = '02_02'"
    ]
   },
