--- a/gt/evaluate_gt.ipynb
+++ b/gt/evaluate_gt.ipynb
@@ -42,7 +42,7 @@
     "# Consensus GT should be placed directly under it, and individual annotations should\n",
     "# be placed in subdirectories.\n",
     "paths = runpy.run_path('../params/paths.py')\n",
-    "GT_DIR = paths['HPC2_DATASETS'] + '_GT'\n",
+    "GT_DIR = Path(paths['HPC2_DATASETS'], 'HPC2_GT')\n",
     "\n",
     "# Representative IoU threshold\n",
     "params = runpy.run_path('../params/defaults.py')\n",
