--- a/gt/majority_vote.ipynb
+++ b/gt/majority_vote.ipynb
@@ -41,7 +41,7 @@
     "# ROI directory\n",
     "# ROIs by individual annotators should be placed in subdirectories.\n",
     "paths = runpy.run_path('../params/paths.py')\n",
-    "ROI_PATH = Path(paths['HPC2_DATASETS'] + '_GT')\n",
+    "ROI_PATH = Path(paths['HPC2_DATASETS'], 'HPC2_GT')\n",
     "\n",
     "# Image directory\n",
     "# For visual inspection, ROIs will be shown on the microscope images under\n",
